[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "address-layer"
version = "0.1.0"
description = "Build OSM reference address tile layers (vector MVT + labelled raster PNG) from any municipal address-point dataset."
requires-python = ">=3.11"
dependencies = ["requests", "Pillow", "ijson"]

[project.optional-dependencies]
# Only needed for cities whose source is a shapefile and/or a non-WGS84 CRS.
shapefile = ["pyshp", "pyproj"]

[project.scripts]
addresslayer = "addresslayer.cli:main"

[tool.setuptools]
packages = ["addresslayer", "addresslayer.fetch"]

[tool.setuptools.package-data]
addresslayer = ["assets/*.tmpl", "assets/*.css", "assets/*.js", "assets/font/*.ttf"]
