[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "address-layerist"
version = "0.2.0"
description = "Build OSM reference address tile layers (vector MVT + labelled raster PNG) from any municipal address-point dataset."
requires-python = ">=3.11"
dependencies = ["addressvault", "Pillow", "ijson"]

[project.scripts]
addresslayerist = "addresslayerist.cli:main"

[tool.setuptools]
packages = ["addresslayerist"]

[tool.setuptools.package-data]
addresslayerist = ["assets/*.tmpl", "assets/*.css", "assets/*.js", "assets/font/*.ttf"]
